--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "axios": "^1.12.2",
-    "expo": "~54.0.10",
+    "expo": "^54.0.22",
     "expo-status-bar": "~3.0.8",
+    "json-server": "^1.0.0-beta.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "^0.81.5",
     "react-native-web": "^0.21.0"
   },
   "private": true
